<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#161616"
    android:orientation="vertical"
    tools:context=".view.AddRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTrueBlack"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/tv_create_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/recipe_create_title"
            android:textColor="@color/colorGainsboro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMidnight"
            android:orientation="vertical"
            android:padding="20dp">

            <!--Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_create_recipeName_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTrueBlack"
                    android:padding="10dp"
                    android:text="@string/recipe_name_label"
                    android:textColor="@color/colorGainsboro"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_create_recipeName_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/colorTrueBlack"
                    android:ems="10"
                    android:hint="@string/create_recipeName_hint"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:shadowColor="@color/colorStorm"
                    android:text="@string/recipe_name_input"
                    android:textColor="@color/colorSmoke"
                    android:textColorHint="@color/colorStorm"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--Coffee-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_create_recipeCoffee_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorTrueBlack"
                    android:padding="10dp"
                    android:text="@string/recipe_coffee_label"
                    android:textColor="@color/colorGainsboro"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/sb_create_recipeCoffee_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:background="@color/colorTrueBlack"
                    android:indeterminate="false"
                    android:max="100"
                    android:padding="10dp"
                    android:progress="50" />
            </LinearLayout>

            <!--Water-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_create_recipeWater_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorTrueBlack"
                    android:padding="10dp"
                    android:text="@string/recipe_water_label"
                    android:textColor="@color/colorGainsboro"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/sb_create_recipeWater_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:background="@color/colorTrueBlack"
                    android:indeterminate="false"
                    android:max="100"
                    android:padding="10dp"
                    android:progress="50" />
            </LinearLayout>

            <!--Temperature-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_create_recipeTemperature_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorTrueBlack"
                    android:padding="10dp"
                    android:text="@string/recipe_temperature_label"
                    android:textColor="@color/colorGainsboro"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/sb_create_recipeTemperature_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:background="@color/colorTrueBlack"
                    android:indeterminate="false"
                    android:max="100"
                    android:padding="10dp"
                    android:progress="50" />
            </LinearLayout>

            <!--Grind Size-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_create_recipeGrindSize_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorTrueBlack"
                    android:padding="10dp"
                    android:text="@string/recipe_grindSize_label"
                    android:textColor="@color/colorGainsboro"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rb_create_recipeGrindSize_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/grindSize_veryFine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_veryFine"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />

                    <RadioButton
                        android:id="@+id/grindSize_fine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_fine"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />

                    <RadioButton
                        android:id="@+id/grindSize_mediumFine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_mediumFine"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />

                    <RadioButton
                        android:id="@+id/grindSize_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_medium"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />

                    <RadioButton
                        android:id="@+id/grindSize_mediumCoarse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_mediumCoarse"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />

                    <RadioButton
                        android:id="@+id/grindSize_coarse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_coarse"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />

                    <RadioButton
                        android:id="@+id/grindSize_coarse2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grindSize_coarse"
                        android:textColor="@color/colorSmoke"
                        android:textColorHighlight="@color/colorSmoke"
                        android:textColorHint="@color/colorSmoke"
                        android:textColorLink="@color/colorSmoke" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>